syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";

service CreteService {
    rpc Create(CreateCommand) returns (UserDto) {};
}

service ListService {
    rpc List() return (stream UserDto) {};
}

message CreateCommand {
    string name = 1;
}

message UserDto {
    uint64 id = 1;
    string name = 2;
}