syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";

service CreateService {
    rpc Create(CreateCommandGrpc) returns (UserDtoGrpc) {};
}

service ListService {
    rpc List(ListCommandGrpc) returns (stream UserDtoGrpc) {};
}

message CreateCommandGrpc {
    string name = 1;
}

message UserDtoGrpc {
    uint64 id = 1;
    string name = 2;
}

message ListCommandGrpc {}